[B]0.3.6[/B]
New small style osd and video info
Fixed Weather labels wrong colour for dark theme
OSD fix for small info not showing after audio/video osd settings
RCB updates - info tags, info wall, updated banner list view
Adv Launcher - added info wall view
OSD updates and fixes

[B]0.3.5[/B]
Added progress bar cache
Added option to change live tv to open epg
banner and medium list now show label rather than title for recently added
Look for local artwork in videoplayer
Artwork Downloader updates
Transifex Download
Fixed music vis info not showing when show in background enabled

[B]0.3.4[/B]
fixed dialogbusy colour issue
videoinfo shows path and premiered when refresh is hovered
fixed dialogslider wrong path for git
Added option for simplified seek bar
OSD only shows info on pressing up or info button
Fixed volume colours for dark theme.
Added option to start lyrics automatically
Updated lyrics to look similar to scrolling music vis text
OSD fixes
Auto show plot option
Colour fixes for dark theme in addon list and info
Syntax error fixes
thumb addon icon fix
changelog addon fix
Fixed music scale artwork

[B]0.3.3[/B]
OSD controls at top of screen
Pause now shows movie info
Option for smaller OSD/info for videos
OSD cleanup
classic poster for genres

[B]0.3.2[/B]
Fixed bug when selecting favourites being hidden by icon selection
Fixed bug when selecting playlist incorrectly shows "select icon" instead of "select file"
Added thumbnails view to advanced launcher.
Added years, studios, genres as defaults for movies
Fixed bug in Reel
Fix thumbnails to show scrolling text
Fixed profile info color on simple home
Re-added Big Info view for advanced launcher

[B]0.3.1[/B]
Fixed icon selection not showing image
Can enable and disable category from custom home items menu
Auto prompt to select icon from extras after choosing path for custom item
Fixed weather scrolling issue (hopefully?)
Fixed thumbs in plugins to show large and small
Fixed weather panel issue

[B]0.3.0[/B]